# backend/server.js
@@ -1,7 +1,8 @@
-const express = require('express')
+const express = require('express');
 const cors = require('cors');
-const dotenv = require('dotenv')
+const dotenv = require('dotenv');
 const connectDB = require('./config/dataBase');
+const { notFound, errorHandler } = require('./middlewares/errorHandler');
 
 dotenv.config();
 connectDB();
@@ -14,11 +15,24 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger-output.json');
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-
 const todoRoutes = require('./routes/todoRoutes');
-app.use('/todo', todoRoutes);
+app.use('/api/todos', todoRoutes);
 
+app.use(notFound);
+app.use(errorHandler);
 
-app.listen(process.env.NODE_PORT, () => {
-	console.log(`Server is running on port ${process.env.NODE_PORT}`);
-})
+const PORT = process.env.NODE_PORT || process.env.PORT || 3000;
+const server = app.listen(PORT, () => {
+	console.log(`Server is running on port ${PORT}`);
+});
+
+const shutdown = (signal) => {
+	console.log(`\n${signal} recebido, encerrando o servidor...`);
+	server.close(() => {
+		console.log('Servidor HTTP encerrado.');
+		process.exit(0);
+	});
+};
+
+process.on('SIGTERM', () => shutdown('SIGTERM'));
+process.on('SIGINT', () => shutdown('SIGINT'));
